add padding and margin to sidebar, add margin to column, add padding to image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,18 @@
     float: right;
     border: solid;
     background-color: lightgreen;
+    padding: 5px;
+    margin: 10px:
 }
 
 .column {
     width: 300px;
     float: left;
+    margin: 10px;
 }
 
 img {
     float: left;
     border: solid lightgreen;
+    padding: 3px;
 }
